Added red coloring and tooltip for invalid widgets.

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -32,6 +32,7 @@ html
     = render 'shared/jquery-auth-patch'
 
     = javascript_include_tag 'support/jquery-ui-1.8.11.custom.min'
+    = javascript_include_tag 'support/jquery.tooltip.v.1.1'
     = javascript_include_tag 'support/dbx'
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/backbone'
