--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -45,7 +45,10 @@
   display: none !important
 
 .home-icon.editing
-  background-color: #DDEF34
+  background-color: #DDEF34 !important
+
+.home-icon.invalid
+  background-color: #E83D05
 
 #builder-container
   background: $light-bg-color
