--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -129,6 +129,13 @@ p.error
   padding: 10px 8px
   border: 1px dashed #000
 
+#simpleTooltip
+  padding: 7px
+  border: 1px solid #DD3C10
+  background: #FFEBE8
+  max-width: 270px
+  font-size: 14px
+
 .lfloat
   float: left
 
