Sidebar widgets now always stay in place, and singletons fade out when they're in use

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -70,7 +70,7 @@
         td.wtab {{ prettyTabs[2] }}
 
   script.sidebar-widget(type="text/template")
-    .sidebar.home-icon data-name="{{ name }}" data-wtype="{{ wtype }}"
+    .sidebar.home-icon class="{{ singletonClass }}" data-name="{{ name }}" data-wtype="{{ wtype }}"
       .icon{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
       .title {{ prettyName }}
   
