--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -26,6 +26,12 @@
     background-position: 0 -32px; }
   #sidebar .option.active {
     background-color: #d8dfea; }
+  #sidebar .home-icon.singletonInUse {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=50);
+    -moz-opacity: 0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5; }
 
 #content {
   float: left;
