--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -30,6 +30,12 @@
     background-position: 0 -32px
   .option.active
     background-color: $highlight-color
+  .home-icon.singletonInUse
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"
+    filter: alpha(opacity=50)
+    -moz-opacity: 0.5
+    -khtml-opacity: 0.5
+    opacity: 0.5
 
 #content
   float: left
