--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -196,10 +196,12 @@
     .input-wrap
       p Stay informed about your favorite business!
       = form_tag "/b/#{@company.name}/informed/submit", :method => 'post' do
+        | <% if (_maybe.optForEmails) { %>
         label Your Email Address:
         br
         input type="text" name="email"
         br
+        | <% } if (_maybe.optForTexts) { %>
         label Phone Number:
         br
         input type="text" name="phone"
@@ -208,6 +210,7 @@
         br
         = select_tag 'carrier', options_for_select(carrier_names)
         br
+        | <% } %>
         span.response
         br
         input(type="submit" value="Send")
@@ -326,6 +329,21 @@
     br
     label Provide your email address to receive opt-ins*:
     input name="email" type="text" value="{{ _maybe.email }}"
+    br
+    p Please select at least one of the following*:
+    | <% if (_maybe.optForEmails) { %>
+    input name="optForEmails" type="checkbox" checked="checked"
+    | <% } else { %>
+    input name="optForEmails" type="checkbox"
+    | <% } %>
+    label Allow users to opt-in for emails.
+    br
+    | <% if (_maybe.optForTexts) { %>
+    input name="optForTexts" type="checkbox" checked="checked"
+    | <% } else { %>
+    input name="optForTexts" type="checkbox"
+    | <% } %>
+    label Allow users to opt-in for text messages.
   
   script.hours-edit-area(type="text/template")
     p Click to checkmark the days you are open:
