Tweaked text for booking widget

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -321,6 +321,7 @@
   
   script.booking-request-edit-area(type="text/template")
     label Enter the email you would like to receive your customers' booking requests on*:
+    p You will be notified through this email once a customer sends a booking request.
     input(name="email" type="text" value="{{ _maybe.email }}")
   
   script.keep-me-informed-edit-area(type="text/template")
