--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -1,7 +1,5 @@
-<p>A potential customer with phone number <%= @params[:phone] %> has sent you a booking request for <%= @params[:company_name] %>:<p>
+<p><%= @params[:name] %> (<%= @params[:phone] %>), a potential customer, has sent you a booking request for <%= @params[:company_name] %> at <%= @params[:time] %> on <%= @params[:date] %>.</p>
 
-<blockquote><%= @params[:content] %></blockquote>
+<p>You may call this customer to confirm the booking at the number they provided: <%= @params[:phone] %></p>
 
-<p>You may call this customer to confirm the booking at the number they provided: <%= @params[:phone] %><p>
-
-<p>Send from your Yomobi mobile site.<p>
+<p>Send from your Yomobi mobile site.</p>
