--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -58,9 +58,10 @@ body
     text-align: center
     font-weight: bold
     font-size: 12px
-  td:hover, td.active
-    background: $secondary-color
+  td:hover
     cursor: pointer
+  td.active
+    background: $secondary-color
 
 .ad-bar
   padding: 4px 0
