--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -146,6 +146,7 @@
 
 #emulator .loader-overlay
   position: absolute
+  z-index: 99
   width: 320px
   height: 480px
   background: url(/images/ui/overlay.png)
@@ -158,6 +159,7 @@
 #emulator .drophover-overlay
   display: none
   position: absolute
+  z-index: 98
   width: 320px
   height: 100%
   background: url(/images/ui/overlay.png)
