--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -6,6 +6,8 @@ h1 = @company.name
 #builder-container
   #builder
     h2 Email Your Followers
+    - if notice
+      p.success = notice
     p = "You have #{ @company.email_followers.size } email follower(s)."
     p
       | Your FROM email address is: 
