Fixed leave_msg widget emailing bug

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -168,10 +168,10 @@
         input type="text" name="subject"
         br
         label Message Content:
-        textarea name="msg_content" rows=5
+        textarea name="feedback" rows=5
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h1 Thanks for your input!
+      h3 Thanks for your input. We'll be sure to contact you later if needed.
   
   script.booking-page(type="text/template")
     .input-wrap
