--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -115,7 +115,7 @@ body
 /////////////////////////////
 
 .page .content.leave_msg
-  textarea[name="msg_content"]
+  textarea[name="feedback"]
     width: 95%
 
 .page .content.hours
