Added link to edit tab bar in builder

--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -11,3 +11,6 @@ ul
   li.option.builder class=active?('builder',active)
     .icon
     a href=builder_main_path Mobile Website Bulider
+  li.option.edit-tab-bar
+    .icon
+    a href=builder_main_path(:anchor => 'edit-tab-bar') Edit/Arrange Mobile Tab Bar
