--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -121,6 +121,9 @@
         display: inline
   .widget-name-edit
     display: none
+    position: relative
+    top: -5px
+    left: 2px
     input[type=text]
       font-size: 2.5em
 
