--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -122,10 +122,10 @@
   .widget-name-edit
     display: none
     position: relative
-    top: -5px
-    left: 2px
+    left: 4px
     input[type=text]
       font-size: 2.5em
+      width: 250px
 
 #emulator-wrapper
   float: left
