--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -33,6 +33,12 @@
     -khtml-opacity: 0.5;
     opacity: 0.5; }
 
+#sidebar .widgets {
+  height: 730px;
+  overflow: auto; }
+  #sidebar .widgets .home-icon {
+    height: 105px; }
+
 #content {
   float: left;
   border: 1px solid #b3b3b3;
