--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -37,6 +37,12 @@
     -khtml-opacity: 0.5
     opacity: 0.5
 
+#sidebar .widgets
+  height: 730px
+  overflow: auto
+  .home-icon
+    height: 105px
+
 #content
   float: left
   border: 1px solid #B3B3B3
