--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -28,4 +28,8 @@ h1 = @company.name
       br
       textarea rows=12 cols=70 name="content" = @old_content
       br
-      = submit_tag 'Send Email'
+      = submit_tag 'Send Email', :class => 'lfloat'
+      .load-box style="padding-top: 3px; display:none"
+        div.loader.lfloat style="margin:2px 4px 0 5px"
+        span.success Sending. Please wait...
+      .clearfix
