--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -116,6 +116,8 @@
         | <% if(_maybe.error) { %>
         p.error Error: {{ _maybe.error }}
         | <% } %>
+        p.error
+          b (Press Enter to add/change)
         .other-names
     	    b Other Page names being used in this category:
     	    ul
