Added skip links in account setup wizard

--- a/app/views/signup/default/step-2.slim
+++ b/app/views/signup/default/step-2.slim
@@ -23,4 +23,5 @@
   .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
+    a.skip-link.rfloat href=account_setup_path(3) Skip this step
     .clearfix
