--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -10,4 +10,5 @@
   .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
+    a.skip-link.rfloat href=builder_main_path Skip this step
     .clearfix
