--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -148,3 +148,5 @@
     font-size: 1.5em; }
   #account-setup-box .site-url input {
     width: 200px; }
+  #account-setup-box a.skip-link {
+    padding: 3px 6px 0 0; }
