Added singleton name detection, separated about-us as its own singleton

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -42,9 +42,16 @@ bdata = [
   },
   
   {
+    name: "custom-page",
+    wtype: 'custom_page',
+    helpText: "Write a page about whatever you like."
+  },
+
+  {
     name: "about-us",
     wtype: 'custom_page',
-    helpText: "A page describing what your business is about."
+    helpText: "A page describing what your business is about.",
+    singleton: true
   },
   
   {
