--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -318,10 +318,9 @@
     label Enter your twitter username [e.g. nytimes]*:
     input(name="fbid" type="text" value="{{ _maybe.fbid }}")
   
-  script.custom_page-edit-area(type="text/template")
-    label A short description of your website*:
+  script.custom_page-edit-area.about-us-edit-area(type="text/template")
     #jeditor-wrapper
-      textarea#jeditor {{ content }}
+      textarea#jeditor {{ _maybe.content }}
 
   script.phone-edit-area(type="text/template")
     label Your company's phone number*:
