Added blog widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -21,6 +21,20 @@ bdata = [
     wtype: 'link',
     helpText: "Add a link from your YoMobi mobile website to your full website."
   },
+
+  {
+    name: "news",
+    wtype: 'link',
+    helpText: "Add a link from your YoMobi mobile website to your news webpage.",
+    singleton: true
+  },
+
+  {
+    name: "blog",
+    wtype: 'link',
+    helpText: "Add a link from your YoMobi mobile website to your blog.",
+    singleton: true
+  },
   
   {
     name: "picasa",
