--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -295,7 +295,7 @@
   / =====================
   / = Widget Edit Pages =
   / =====================
-  script.link-edit-area(type="text/template")
+  script.link-edit-area.news-edit-area.blog-edit-area(type="text/template")
     label Enter your website's address [e.g. www.mysite.com]*:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
