Centered mobile site

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -4,6 +4,7 @@ body {
 
 #mobile-container {
   width: 320px;
+  margin: 0 auto;
   overflow: hidden;
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif; }
 
