--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -8,6 +8,7 @@ body
 
 #mobile-container
   width: $dynamic-width
+  margin: 0 auto
   overflow: hidden
   font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
 
