--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -22,7 +22,7 @@
       p.error Name is already taken?
     
     .site-url
-      span http://www.yomobi.com/b/
+      span http://www.yomobi.com/
       input type="text" value="#{@data['site_url'] || 'my-business'}" name="step_data[site_url]"
     
     hr
