--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -30,13 +30,17 @@ body {
   background: #3b5998;
   color: white; }
 
-.company-info .logo {
-  float: left;
-  background: no-repeat; }
-.company-info .name {
-  float: left;
-  font-size: 24px;
-  padding: 8px 0 0 12px; }
+.company-info {
+  padding-left: 4px;
+  width: 308px; }
+  .company-info td {
+    vertical-align: center; }
+  .company-info .logo {
+    background: no-repeat; }
+  .company-info .name {
+    padding-left: 5px;
+    font-size: 17px;
+    font-weight: bold; }
 
 .tab-bar {
   background: #3b5998;
