Generalized special link widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -44,15 +44,21 @@ bdata = [
   },
   
   {
-    name: "facebook-page",
+    name: "facebook",
     wtype: 'link_fb',
-    helpText: "Add a one-tap link to your businesses's Facebook page."
+    helpText: "Add a one-tap link to your businesses's Facebook page.",
+    host: 'http://facebook.com/',
+    basename: 'facebook',
+    singleton: true
   },
   
   {
-    name: "twitter-page",
-    wtype: 'link_twitter',
-    helpText: "Add a one-tap link to your businesses's Twitter page."
+    name: "twitter",
+    wtype: 'link_fb',
+    helpText: "Add a one-tap link to your businesses's Twitter page.",
+    host: 'http://twitter.com/',
+    basename: 'twitter',
+    singleton: true
   },
   
   {
