--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -308,19 +308,12 @@
     label Enter your Picasa web url*:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
-  script.link_fb-edit-area(type="text/template")
+  script.facebook-edit-area.twitter-edit-area(type="text/template")
     h3 Current Link
     p
       a href="{{ url }}" target="_blank" {{ anchorText }}
-    label Enter your facebook id [e.g. Starbucks] or url [e.g. www.facebook.com/Starbucks]*:
-    input(name="fbid" type="text" value="{{ _maybe.fbid }}")
-  
-  script.link_twitter-edit-area(type="text/template")
-    h3 Current Link
-    p
-      a href="{{ url }}" target="_blank" {{ anchorText }}
-    label Enter your twitter username [e.g. nytimes]*:
-    input(name="fbid" type="text" value="{{ _maybe.fbid }}")
+    label Enter your {{ basename }} id [e.g. Starbucks] or url [e.g. www.{{ basename }}.com/path/to/Starbucks]*:
+    input(name="userId" type="text" value="{{ _maybe.userId }}")
   
   script.custom_page-edit-area.about-us-edit-area(type="text/template")
     #jeditor-wrapper
