--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -156,7 +156,7 @@
 #builder .loader-overlay
   position: absolute
   z-index: 99
-  top: 117px
+  // top: 117px
   width: 320px + 4px
   height: 480px + 8px
   background: url(/images/ui/overlay.png)
@@ -170,8 +170,8 @@
   display: none
   position: absolute
   z-index: 98
-  width: 320px
-  height: 100%
+  width: 320px + 4px
+  height: 480px + 8px
   background: url(/images/ui/overlay.png)
   .icon
     width: 128px
