Added spacers to sidebar

--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -9,6 +9,9 @@
     list-style: none
     padding-left: 0
     margin-top: 54px
+  .spacer
+    border-top: 1px solid #ddd
+    margin: 5px 0
   .option
     height: 16px
     padding: 3px 0 2px 4px
