--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -2,15 +2,18 @@ ul
   li.option.basic class=active?('mobile',active)
     .icon
     a#preview-mobile-site href="/#{@company.db_name}" View Mobile Site
+  li.spacer
   li.option.text class=active?('email',active)
     .icon
     a href=builder_email_path Email Your Followers
   li.option.text class=active?('text',active)
     .icon
     a href=builder_text_path Send Text to Your Followers
+  li.spacer
   li.option.edit-tab-bar
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') Edit/Arrange Mobile Tab Bar
+  li.spacer
   li.option.builder class=active?('builder',active)
     .icon
     a href=builder_main_path Mobile Website Bulider
