--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -5,6 +5,9 @@
     list-style: none;
     padding-left: 0;
     margin-top: 54px; }
+  #sidebar .spacer {
+    border-top: 1px solid #dddddd;
+    margin: 5px 0; }
   #sidebar .option {
     height: 16px;
     padding: 3px 0 2px 4px;
