Changed opt_out confirmation page

--- a/app/views/widgets/informed/opt_out.slim
+++ b/app/views/widgets/informed/opt_out.slim
@@ -1,4 +1,7 @@
 p
-  | You have been opted out of receiving emails from 
+  | You have chosen not to receive any email notifications from
   = @company_name
-  | . Thank you for using Yomobi Mobile.
+  | .
+p
+  | If you have decided to subscribe again, please follow this link and input your information once again: 
+  a href=@opt_in_url = @opt_in_url
