--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -1,6 +1,5 @@
 - content_for :sidebar do
   = render :partial => 'shared/sidebar', :locals => {:active => 'email'}
-  .widgets
 
 - content_for :js do
   = javascript_include_tag 'send_panel.js'
@@ -16,7 +15,9 @@ h1 = @company.name
       | Your FROM email address is: 
       = @company.informed_email || "NONE"
       - if @company.informed_email.nil?
-        | ALERT: In order to send emails or texts to followers, you must provide a FROM email address.
+        p.error 
+          | ALERT: In order to send emails or texts to followers, you must provide a FROM email address. Please enter an email address in the "Keep Me Informed" widget in your
+          a href=builder_main_path mobile website builder.
     - if @errors[:no_email]
       p.error = @errors[:no_email]
     = form_tag '', :method => :post do
