Followers are now active/inactive

--- a/app/views/user_mailer/email_follower.html.erb
+++ b/app/views/user_mailer/email_follower.html.erb
@@ -2,4 +2,4 @@
 
 <p>You are receiving this email because you opted to receive emails from <%= @params[:company_name] %> through their mobile site.</p>
 
-<p>To opt out of further emails from this company, visit <a href="<%= @params[:short_url] %>">click here.</a></p>
+<p>To opt out of further emails from this company, <a href="<%= @params[:short_url] %>">click here.</a></p>
