Added settings panel

--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -10,6 +10,9 @@ ul
     .icon
     a href=builder_text_path Send Text to Your Followers
   li.spacer
+  li.option.edit-settings
+    .icon
+    a href=builder_main_path(:anchor => 'edit-settings') General Settings
   li.option.edit-tab-bar
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') Edit/Arrange Mobile Tab Bar
