--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -84,15 +84,17 @@
     .help-text
       padding: 0 20px 0 72px
       margin-top: 5px
-  .header.edit-tab-bar
+  .header.edit-tab-bar, .header.edit-settings
     .help-text, .widget-name
       padding-left: 0
       cursor: auto
+  .logo
+    margin: 10px 0
   
   .edit-area
     padding: 20px 20px
     textarea, input[type=text]
-      width: 98%
+      width: 317px
       font-size: 1.5em
     textarea
       padding: 8px
