--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -51,6 +51,7 @@ html
 
     = javascript_include_tag 'views/edit-widget'
     = javascript_include_tag 'views/edit-tab-bar'
+    = javascript_include_tag 'views/edit-settings'
 
     - Dir[widgets_dir('builder/*.js')].sort.each do |widget|
       - next if File.basename(widget) == 'base.js'
