--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -103,10 +103,10 @@
       .title {{ prettyName }}
   
   script.add-widget-dialog(type="text/template")
-    #dialog-confirm title="Please Name your New Widget"
+    #dialog-confirm title="Please Rename your Widget"
   	  p
   	    span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"
-  	    | Please name your new <b>{{ wtype }}</b> widget:
+  	    | Please rename your <b>{{ wtype }}</b> widget:
         input type="text" value="{{ defaultName }}" name="wname"
         | <% if(_maybe.error) { %>
         p.error Error: {{ _maybe.error }}
