Lots of ie7-specific fixes

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -28,7 +28,9 @@ html
     
     = render 'shared/templates'
     
-    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
+    = javascript_include_tag 'support/json2.min'
+    /= javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
+    = javascript_include_tag 'support/jquery-1.6.1.min'
     = render 'shared/jquery-auth-patch'
 
     = javascript_include_tag 'support/jquery-ui-1.8.13.custom.min'
