--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3,8 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-  font-size: 11px;
-  overflow-y: scroll; }
+  font-size: 11px; }
 
 a, a:visited {
   color: #3b5998;
