--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -143,6 +143,7 @@
   width: $emulator-width
 
 #emulator
+  position: relative
   border: 4px solid #1D4088
   background: $light-bg-color
   overflow: hidden
