--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -13,6 +13,9 @@ ul
   li.option.edit-settings
     .icon
     a href=builder_main_path(:anchor => 'edit-settings') General Settings
+  li.option.text class=active?('booster',active)
+    .icon
+    a href=builder_booster_path Traffic Booster
   li.option.edit-tab-bar
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') Edit/Arrange Mobile Tab Bar
