Fixed look of opt-out confirmation page

--- a/app/views/widgets/informed/opt_out.slim
+++ b/app/views/widgets/informed/opt_out.slim
@@ -1,7 +1,9 @@
 p
-  | You have chosen not to receive any email notifications from
+  | You have chosen not to receive any text/email notifications from
   = @company_name
   | .
 p
-  | If you have decided to subscribe again, please follow this link and input your information once again: 
-  a href=@opt_in_url = @opt_in_url
+  | If you have decided to subscribe again, please 
+  a href=@opt_in_url follow this link
+  |  and input your information once again.
+  
