Updated widget icons

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -19,7 +19,8 @@ bdata = [
   {
     name: "full-website",
     wtype: 'link',
-    helpText: "Add a link from your YoMobi mobile website to your full website."
+    helpText: "Add a link from your YoMobi mobile website to your full website.",
+    singleton: true
   },
 
   {
