Added call me back widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -119,6 +119,13 @@ bdata = [
     helpText: "This widget allows your customers to opt-in to receive email and sms notifications from you.",
     singleton: true
   },
+
+  {
+    name: "call-me-back",
+    wtype: 'call_back',
+    helpText: "This widget allows your customers to request you to call them back.",
+    singleton: true
+  },
   
   {
     name: "operation-hours",
